--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ballotApp/ballotApp.git"
+    "url": "git+https://github.com/ballotize/ballotize-io.git"
   },
   "keywords": [
     "voting",
@@ -21,12 +21,12 @@
     "bookshelf",
     "mysql"
   ],
-  "author": "Hackson5",
+  "author": "Ballotize",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ballotApp/ballotApp/issues"
+    "url": "https://github.com/ballotize/ballotize-io/issues"
   },
-  "homepage": "https://github.com/ballotApp/ballotApp#readme",
+  "homepage": "https://github.com/ballotize/ballotize-io#readme",
   "dependencies": {
     "body-parser": "^1.14.2",
     "bookshelf": "^0.9.1",
